services/windows/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: vm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: volume
        - name: dev-kvm
          hostPath:
            path: /dev/kvm
      terminationGracePeriodSeconds: 120
      containers:
        - name: windows
          image: ghcr.io/dockur/windows:3.12
          ports:
            - name: vnc
              containerPort: 8006
              protocol: TCP
            - name: rdp-tcp
              containerPort: 3389
              protocol: TCP
            - name: rdp-udp
              containerPort: 3389
              protocol: UDP
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /storage
              name: storage
            - mountPath: /dev/kvm
              name: dev-kvm
