services/windows/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app.kubernetes.io/component: vm
  ports:
    - name: vnc
      port: 80
      targetPort: vnc
