services/windows/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://windows.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: windows
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: mdi-microsoft-windows
    gethomepage.dev/name: Windows
spec:
  ingressClassName: nginx
  rules:
    - host: windows.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: vnc
